# vscode-chat-history

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
pipeline/: run_pipeline.py
pipeline/01_ingest/: __init__.py  ingest.py
pipeline/02_normalize/: __init__.py  aggregator.py  normalize.py  parsers.py
pipeline/03_report/: __init__.py  report.py
pipeline/lib/: __init__.py  config.py  db_reader.py  models.py  patch.py
pipeline/lib/origem/: Monitor-SqliteKeyDiff_v2.ps1
pipeline/viewer/: app.py  i18n.py
